--- a/forms.htm
+++ b/forms.htm
@@ -1,100 +1,102 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta http-equiv="Content-Language" content="en-us" />
+    <meta
+      name="description"
+      content="Shawnee Mission South High School Track &amp; Field"
+    />
+    <meta
+      name="keywords"
+      content="shawnee mission south track, south track, sms track, south track &amp; field"
+    />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-	<meta http-equiv="Content-Language" content="en-us">
-	<meta name="description" content="Shawnee Mission South High School Track &amp; Field">
-	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<title>Forms</title>
-	<style type="text/css">
-		.style24 {
-			font-size: large;
-			color: #000080;
-		}
-	</style>
-	<link rel="stylesheet" type="text/css" href="css/sms.css">
-	<style type="text/css">
-		.style23 {
-			text-align: center;
-		}
-	</style>
-</head>
+    <link rel="stylesheet" type="text/css" href="css/sms.css" />
+    <title>Forms</title>
+  </head>
 
-<body>
-	<div class="mainheader"></div>
-	<div class="teamheader"></div>
-	<div class="content">
-		<div id="contenttable">
-			<table border="0" cellpadding="0" cellspacing="0" width="100%">
-				<tr>
-					<td valign="top" width="100%">
-						<div>
-							<h2 align="center">Forms</h2>
-							<p align="center"><span class="style1">2017/18</span></p>
-							<div style="display: none">
-								<p align="center">
-									<a target="_blank" href="https://docs.google.com/drawings/d/18R0vFLim1X3SZnU7D390QTIVm6eiuoNpJmSsRZ4glAw/edit?usp=sharing">
-										Spirit Wear</a>&nbsp; (<a target="_blank" href="https://docs.google.com/document/d/1-fmX1Px9T75Tsj90tsRZP0T5eaZv_K0M6syda-QKCjY/edit?usp=sharing">Order
-										Form</a>)
-									<hr width="300px" style="color:green">
-								</p>
-							</div>
-							<p align="center">
-								<span class="style24">Booster Club Membership</span><br>
-								<a target="_blank" href="https://drive.google.com/open?id=0B_TDLMsY9LIUeVQ5WUV3THpzVzBlNGwwdkE0Qlc1R0NhVEc0">
-									Form</a><br>
-							</p>
+  <body>
+    <div class="maindiv grid-container">
+      <div class="mainheader"></div>
+      <div class="mainmenu menubar"></div>
+      <div class="teammenu menubar"></div>
+      <div class="left"></div>
+      <div class="middle">
+        <div class="contentheader">Forms</div>
+        <div class="subcontentheader">2017/18</div>
+        <div class="contenttext">
+          <div style="display: none">
+					<p>
+						<a target="_blank" href="https://docs.google.com/drawings/d/18R0vFLim1X3SZnU7D390QTIVm6eiuoNpJmSsRZ4glAw/edit?usp=sharing">
+							Spirit Wear</a>&nbsp; (<a target="_blank" href="https://docs.google.com/document/d/1-fmX1Px9T75Tsj90tsRZP0T5eaZv_K0M6syda-QKCjY/edit?usp=sharing">Order
+							Form</a>)
+						<hr style="color:green">
+					</p>
+				</div>
+				<p>
+					<span class="style24">Booster Club Membership</span><br>
+					<a target="_blank" href="https://drive.google.com/open?id=0B_TDLMsY9LIUeVQ5WUV3THpzVzBlNGwwdkE0Qlc1R0NhVEc0">
+						Form</a><br>
+				</p>
 
-							<p align="center">
-								<span class="style1m">Booster Club Scholarship</span><br>
+				<p>
+					<span class="style1m">Booster Club Scholarship</span><br>
 
-								<a target="_blank" href="https://drive.google.com/open?id=1A05TS_Kq7i3THGfF-jjWSxUoKW4ka16D">
-									Information (2018)</a>
-								<br>
-								<a target="_blank" href="https://docs.google.com/document/d/1HwxNUoTLLDlZnSKUK7-1SRUhBudneRWOo-67YBHb_W0/edit?usp=sharing">
-									Application</a>
-							</p>
-							<p align="center">
-								<span class="style1m">Merlin Gish Scholarship </span><br>
-								<a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwakVDeGU3ZWszejR2NW1jS0s2WjNQSDV5UkxN/view?usp=sharing">
-									Information</a><br>
-								<a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwbDBWMnF4aHQ1ZkJ3U05nWXV0RWpFdWd0SzVF/view?usp=sharing">
-									Application</a>
-							</p>
-							<p align="center">
-								<span class="style24">Athnet Sports Recruiting Scholarship</span><br>
-								<a target="_blank" href="http://www.athleticscholarships.net/scholarship-contest.htm">
-									Link</a><br>
-							</p>
-						</div>
-					</td>
-					<td height="273"></td>
-				</tr>
-				<tr>
-					<td>
-						<p>&nbsp;</p>
-					</td>
-				</tr>
-			</table>
-		</div>
-		<div class="footer"></div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script>
-			$(".mainheader").load("/header.html");
-			$(".teamheader").load("/teamheader.html");
-			$(".footer").load("/footer.html");
-		</script>
-		<!-- Start of StatCounter Code for Default Guide -->
-		<script type="text/javascript">
-			var sc_project = 3895026;
-			var sc_invisible = 1;
-			var sc_security = "c1dd7cc1";
-		</script>
-		<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
-		<noscript>
-			<div class="statcounter"><a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img
-					 class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
-		</noscript>
-		<!-- End of StatCounter Code for Default Guide -->
-</body>
+					<a target="_blank" href="https://drive.google.com/open?id=1A05TS_Kq7i3THGfF-jjWSxUoKW4ka16D">
+						Information (2018)</a>
+					<br>
+					<a target="_blank" href="https://docs.google.com/document/d/1HwxNUoTLLDlZnSKUK7-1SRUhBudneRWOo-67YBHb_W0/edit?usp=sharing">
+						Application</a>
+				</p>
+				<p>
+					<span class="style1m">Merlin Gish Scholarship </span><br>
+					<a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwakVDeGU3ZWszejR2NW1jS0s2WjNQSDV5UkxN/view?usp=sharing">
+						Information</a><br>
+					<a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwbDBWMnF4aHQ1ZkJ3U05nWXV0RWpFdWd0SzVF/view?usp=sharing">
+						Application</a>
+				</p>
+				<p>
+					<span class="style24">Athnet Sports Recruiting Scholarship</span><br>
+					<a target="_blank" href="http://www.athleticscholarships.net/scholarship-contest.htm">
+						Link</a><br>
+				</p>
+        </div>
+      </div>
+      <div class="right"></div>
+      <div class="footer"></div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+      $(".mainheader").load("/header.html");
+      $(".mainmenu").load("/mainmenu.html");
+      $(".teammenu").load("/teammenu.html");
+      $(".footer").load("/footer.html");
+    </script>
+    <!-- Start of StatCounter Code for Default Guide -->
+    <script type="text/javascript">
+      var sc_project = 3895026;
+      var sc_invisible = 1;
+      var sc_security = "c1dd7cc1";
+    </script>
+    <script
+      type="text/javascript"
+      src="http://www.statcounter.com/counter/counter.js"
+    ></script>
+    <noscript>
+      <div class="statcounter">
+        <a
+          title="web stats"
+          href="http://statcounter.com/free-web-stats/"
+          target="_blank"
+          ><img
+            class="statcounter"
+            src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/"
+            alt="web stats"
+        /></a>
+      </div>
+    </noscript>
+    <!-- End of StatCounter Code for Default Guide -->
+  </body>
 </html>
