--- a/rules.htm
+++ b/rules.htm
@@ -1,99 +1,125 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta http-equiv="Content-Language" content="en-us" />
+    <meta
+      name="description"
+      content="Shawnee Mission South High School Track &amp; Field"
+    />
+    <meta
+      name="keywords"
+      content="shawnee mission south track, south track, sms track, south track &amp; field"
+    />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-	<meta http-equiv="Content-Language" content="en-us">
-	<meta name="description" content="Shawnee Mission South High School Track &amp; Field">
-	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<title>Rules</title>
-	<link rel="stylesheet" type="text/css" href="css/sms.css">
-	<style type="text/css">
-		.style23 {
-			text-align: center;
-		}
-	</style>
-</head>
+    <link rel="stylesheet" type="text/css" href="css/sms.css" />
+    <title>Rules</title>
+  </head>
 
-<body>
-	<div class="mainheader"></div>
-	<div class="teamheader"></div>
-	<div class="content">
-		<div id="contenttable">
-			<table border="0" cellpadding="0" cellspacing="0" width="100%">
-				<tr>
-					<td valign="top" width="100%">
-						<div>
-							<h1 align="center">SM South Track &amp; Field Rules</h1>
-							<ol>
-								<li><strong>Be at practice.
-									</strong>
-									<ul>
-										<li>Coach must be informed of absences ahead of time!</li>
-									</ul>
-								</li>
-								<li><strong>Be on time.</strong></li>
-								<li><strong>Respect yourself, teammates, coaches, equipment, facilities,
-										opponents, event officials, and spectators.</strong></li>
-								<li><strong>You are a student first â€“ do well in the classroom.</strong>
-									<ul>
-										<li>Poor grades will not be tolerated</li>
-									</ul>
-								</li>
-								<li><strong>Be prepared.</strong>
-									<ul>
-										<li>Clothes match the weather</li>
-										<li>Appropriate shoes</li>
-										<li>Pack well for meets</li>
-									</ul>
-								</li>
-								<li><strong>Complete workouts with your best effort.</strong></li>
-								<li><strong>Give your best effort at meets.</strong></li>
-								<li><strong>Cheer for your teammates at meets.</strong></li>
-								<li><strong>Let coaches know about injuries.</strong></li>
-								<li>
-									<strong>Follow all school rules &amp; expectations in the classroom.</strong></li>
-								<li>
+  <body>
+    <div class="maindiv grid-container">
+      <div class="mainheader"></div>
+      <div class="mainmenu menubar"></div>
+      <div class="teammenu menubar"></div>
+      <div class="left"></div>
+      <div class="middle">
+        <div class="contentheader">SM South Track &amp; Field Rules</div>
+        <div class="contenttext">
+          <ol>
+            <li>
+              <strong>Be at practice. </strong>
+              <ul>
+                <li>Coach must be informed of absences ahead of time!</li>
+              </ul>
+            </li>
+            <li><strong>Be on time.</strong></li>
+            <li>
+              <strong
+                >Respect yourself, teammates, coaches, equipment, facilities,
+                opponents, event officials, and spectators.</strong
+              >
+            </li>
+            <li>
+              <strong
+                >You are a student first â€“ do well in the classroom.</strong
+              >
+              <ul>
+                <li>Poor grades will not be tolerated</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Be prepared.</strong>
+              <ul>
+                <li>Clothes match the weather</li>
+                <li>Appropriate shoes</li>
+                <li>Pack well for meets</li>
+              </ul>
+            </li>
+            <li><strong>Complete workouts with your best effort.</strong></li>
+            <li><strong>Give your best effort at meets.</strong></li>
+            <li><strong>Cheer for your teammates at meets.</strong></li>
+            <li><strong>Let coaches know about injuries.</strong></li>
+            <li>
+              <strong
+                >Follow all school rules &amp; expectations in the
+                classroom.</strong
+              >
+            </li>
+            <li>
+              <strong>Warm-up correctly and with a purpose.</strong>
+            </li>
+            <li>
+              <strong
+                >Demonstrate Good Sportsmanship at all times win or
+                lose.</strong
+              >
+            </li>
+            <li>
+              <strong
+                >Represent your school, family, &amp;amp; community with pride
+                and respect.</strong
+              >
+            </li>
+          </ol>
+        </div>
+      </div>
+    </div>
+    <div class="right"></div>
+    <div class="footer"></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+      $(".mainheader").load("/header.html");
+      $(".mainmenu").load("/mainmenu.html");
+      $(".teammenu").load("/teammenu.html");
+      $(".footer").load("/footer.html");
+    </script>
 
-									<strong>Warm-up correctly and with a purpose.</strong></li>
-								<li>
+    <!-- Start of StatCounter Code for Default Guide -->
+    <script type="text/javascript">
+      var sc_project = 3895026;
+      var sc_invisible = 1;
+      var sc_security = "c1dd7cc1";
+    </script>
+    <script
+      type="text/javascript"
+      src="http://www.statcounter.com/counter/counter.js"
+    ></script>
+    <noscript>
+      <div class="statcounter">
+        <a
+          title="web stats"
+          href="http://statcounter.com/free-web-stats/"
+          target="_blank"
+          ><img
+            class="statcounter"
+            src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/"
+            alt="web stats"
+        /></a>
+      </div>
+    </noscript>
+    <!-- End of StatCounter Code for Default Guide -->
+  </body>
 
-									<strong>Demonstrate Good Sportsmanship at all times win or lose.</strong></li>
-								<li>
-
-									<strong>Represent your school, family, &amp;amp; community with pride and respect.</strong></li>
-							</ol>
-						</div>
-					</td>
-					<td height="273"></td>
-				</tr>
-				<tr>
-					<td>
-						<p>&nbsp;</p>
-					</td>
-				</tr>
-			</table>
-		</div>
-		<div class="footer"></div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script>
-			$(".mainheader").load("/header.html");
-			$(".teamheader").load("/teamheader.html");
-			$(".footer").load("/footer.html");
-		</script>
-		<!-- Start of StatCounter Code for Default Guide -->
-		<script type="text/javascript">
-			var sc_project = 3895026;
-			var sc_invisible = 1;
-			var sc_security = "c1dd7cc1";
-		</script>
-		<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
-		<noscript>
-			<div class="statcounter"><a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img
-					 class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
-		</noscript>
-		<!-- End of StatCounter Code for Default Guide -->
-</body>
-
-<!-- #EndTemplate -->
-
+  <!-- #EndTemplate -->
 </html>
