--- a/team.htm
+++ b/team.htm
@@ -20,39 +20,40 @@
 		<div class="left"></div>
 		<div class="middle">
 			<div class="contentheader">Welcome</div>
-			<!-- <h2>Welcome:</h2> -->
-			<p>
-				Welcome to the SM South Raider Track &amp; Field Team.&nbsp; By choosing to be part of this team, you have
-				made
-				yourself part of a great institution at SM South High School.&nbsp; This team has a deep tradition of excellence
-				in
-				the state of Kansas.&nbsp;
-				This tradition includes many state team championships, state team placings, individual state champions, and
-				5
-				Kansas All-time best performers.&nbsp; SM South has also had countless individual and relay state medalists.
-			</p>
-			<p>
-				Not every athlete that has worn a Raider track &amp; field uniform has gone on to become a top notch
-				performer,
-				but they have all been an integral part of the team.&nbsp; No one student-athlete is any less important than
-				another.&nbsp; This program is
-				a family and we all share in the success and heartbreaks together as a team.&nbsp;
-			</p>
-			<p>
-				You will get as much out of this experience as you let yourself.&nbsp; Try new events, work hard everyday,
-				and
-				be a team player.&nbsp; If you do those things, success will come in many different ways.&nbsp; This team
-				has no
-				cuts and no bench.&nbsp; Everyone
-				gets to take part and can be successful in their own way. It's not about wins and losses, but the
-				improvements
-				that you personally make.&nbsp; Thank you for choosing to be a part of this program and good luck to
-				you.&nbsp;
-			</p>
+			<div class="contenttext">
+				<p>
+					Welcome to the SM South Raider Track &amp; Field Team.&nbsp; By choosing to be part of this team, you have
+					made
+					yourself part of a great institution at SM South High School.&nbsp; This team has a deep tradition of excellence
+					in
+					the state of Kansas.&nbsp;
+					This tradition includes many state team championships, state team placings, individual state champions, and
+					5
+					Kansas All-time best performers.&nbsp; SM South has also had countless individual and relay state medalists.
+				</p>
+				<p>
+					Not every athlete that has worn a Raider track &amp; field uniform has gone on to become a top notch
+					performer,
+					but they have all been an integral part of the team.&nbsp; No one student-athlete is any less important than
+					another.&nbsp; This program is
+					a family and we all share in the success and heartbreaks together as a team.&nbsp;
+				</p>
+				<p>
+					You will get as much out of this experience as you let yourself.&nbsp; Try new events, work hard everyday,
+					and
+					be a team player.&nbsp; If you do those things, success will come in many different ways.&nbsp; This team
+					has no
+					cuts and no bench.&nbsp; Everyone
+					gets to take part and can be successful in their own way. It's not about wins and losses, but the
+					improvements
+					that you personally make.&nbsp; Thank you for choosing to be a part of this program and good luck to
+					you.&nbsp;
+				</p>
+			</div>
 		</div>
+		<div class="right"></div>
+		<div class="footer"></div>
 	</div>
-	<div class="left"></div>
-	<div class="footer"></div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
 		$(".mainheader").load("/header.html");
