--- a/guidelines.htm
+++ b/guidelines.htm
@@ -19,9 +19,9 @@
 		<div class="teammenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
+			<div class="contentheader">Team Guidelines</div>
+
 			<div class="contenttext">
-								<span style="font-size:20.0pt;mso-bidi-font-size:12.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;">
-									Team Guidelines:<o:p></o:p></span></h2>
 							<p class="style1">
 								<span style="font-size:14.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;">
 									Practice Guidelines:<o:p></o:p></span></p>
