--- a/roster.htm
+++ b/roster.htm
@@ -1,56 +1,46 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en-us">
 
 <head>
 	<meta http-equiv="Content-Language" content="en-us">
 	<meta name="description" content="Shawnee Mission South High School Track &amp; Field">
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<title>Roster</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" type="text/css" href="/css/sms.css">
-	<style type="text/css">
-		.style23 {
-			text-align: center;
-		}
-	</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Roster</title>
 </head>
 
 <body>
-	<div class="mainheader"></div>
-	<div class="teamheader"></div>
-	<div class="content">
-		<table border="0" cellpadding="0" cellspacing="0" width="100%">
-			<tr>
-				<td valign="top" width="100%">
-					<p>&nbsp;</p>
-					<p class="contentheader">Coming Soon!</p>
-				</td>
-				<td height="273"></td>
-			</tr>
-			<tr>
-				<td>
-					<p>&nbsp;</p>
-				</td>
-			</tr>
-		</table>
-	</div>
-	<div class="footer"></div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script>
-		$(".mainheader").load("/header.html");
-		$(".teamheader").load("/teamheader.html");
-		$(".footer").load("/footer.html");
-	</script>
-<!-- Start of StatCounter Code for Default Guide -->
-	<script type="text/javascript">
-		var sc_project = 3895026;
-		var sc_invisible = 1;
-		var sc_security = "c1dd7cc1";
-	</script>
-	<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
-	<noscript>
-		<div class="statcounter"><a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img
-				 class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
-	</noscript>
-	<!-- End of StatCounter Code for Default Guide -->
+	<div class="maindiv grid-container">
+		<div class="mainheader"></div>
+		<div class="mainmenu menubar"></div>
+		<div class="teammenu menubar"></div>
+		<div class="left"></div>
+		<div class="middle">
+			<div class="contentheader">Roster</div>
+		</div>
+		<div class="right"></div>
+		<div class="footer"></div>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script>
+			$(".mainheader").load("/header.html");
+			$(".mainmenu").load("/mainmenu.html");
+			$(".teammenu").load("/teammenu.html");
+			$(".footer").load("/footer.html");
+		</script>
+		<!-- Start of StatCounter Code for Default Guide -->
+		<script type="text/javascript">
+			var sc_project = 3895026;
+			var sc_invisible = 1;
+			var sc_security = "c1dd7cc1";
+		</script>
+		<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
+		<noscript>
+			<div class="statcounter"><a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img
+					 class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
+		</noscript>
+		<!-- End of StatCounter Code for Default Guide -->
 </body>
+
 </html>
