--- a/rules.htm
+++ b/rules.htm
@@ -24,7 +24,7 @@
       <div class="teammenu menubar"></div>
       <div class="left"></div>
       <div class="middle">
-        <div class="contentheader">SM South Track &amp; Field Rules</div>
+        <div class="contentheader">Team Rules</div>
         <div class="contenttext">
           <ol>
             <li>
