--- a/teammenu.html
+++ b/teammenu.html
@@ -1,4 +1,4 @@
-<a href="guidelines.htm">Policies</a>
+<a href="guidelines.htm">Guidelines</a>
 <a href="rules.htm">Rules</a>
 <a href="forms.htm">Forms</a>
 <a href="roster.htm">Roster</a>
