--- a/throws/throwsheader.html
+++ b/throws/throwsheader.html
@@ -1,24 +1,11 @@
-<div class="maindiv">
-    <div class="bodydiv">
-        <div id='banner' class='style1'>
-            <table cellspacing='0' cellpadding='0' class='style99' style='width: 100%; height: 200px;'>
-                <tr onclick='location.href=&quot;index.htm&quot;' style='cursor:pointer;'>
-                    <td align='left' valign='top'>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <div style='max-width:1597px' id='menubar' class='menubar'>
-            <table class='menubar' border='0' cellpadding='0' style='border-collapse: collapse' width='100%' id='table1'>
-                <tr class='menubar'>
-                    <td><a href='/index.htm'>Track Home</a></td>
-                    <td><a href='formchart.htm'>Meet Sheets</a></td>
-                    <td><a href='videos.htm'>Videos</a></td>
-                    <td><a href='practice.htm'>Practice</a></td>
-                    <td><a href='links.htm'>Links</a></td>
-                    <td><a href='/team.htm'>Team</a></td>
-                </tr>
-            </table>
-        </div>
+<div
+  class="throwshero"
+  onclick="location.href='/throws/index.htm'"
+  style="cursor:pointer; z-index: 1"
+>
+  <div style="text-align: left">
+    <div class="titletext">
+      <p>Shawnee Mission South<br>Shot & Disc</p>
     </div>
+  </div>
 </div>
