--- a/throws/index.htm
+++ b/throws/index.htm
@@ -1,75 +1,44 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta
-      name="description"
-      content="Shawnee Mission South High School Track &amp; Field"
-    />
-    <meta
-      name="keywords"
-      content="shawnee mission south track, south track, sms track, south track &amp; field"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link rel="stylesheet" href="/css/sms.css" />
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="description" content="Shawnee Mission South High School Track &amp; Field" />
+  <meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      rel="alternate"
-      type="application/rss+xml"
-      title="RSS"
-      href="http://smstrack.org/feed.xml"
-    />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="/css/sms.css" />
 
-    <title>Shawnee Mission South Shot and Disc</title>
-  </head>
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="http://smstrack.org/feed.xml" />
 
-  <body>
-    <div class="maindiv grid-container">
-      <div class="throwsheader mainheader"></div>
-      <div class="throwsmenu menubar"></div>
-      <div class="left"></div>
-      <div class="middle">
-        <div class="content">
-          <table
-            class="style101"
-            border="0"
-            cellpadding="0"
-            cellspacing="0"
-            width="100%"
-          >
-            <tr>
-              <td valign="top" width="100%" align="center">
-                <a href="Top%20Ten%20Reasons%20to%20Throw%20the%20Discus.htm"
-                  >Top ten reasons to throw the discus at SMS</a
-                ><br />
-                <br />
-                <a href="Top%20Ten%20Reasons%20to%20Throw%20the%20Shot.htm"
-                  >Top ten reasons to throw the shot at SMS</a
-                >
-              </td>
-              <td height="273"></td>
-            </tr>
-            <tr>
-              <td>
-                <p>&nbsp;</p>
-              </td>
-            </tr>
-          </table>
+  <title>Shawnee Mission South Shot and Disc</title>
+</head>
+
+<body>
+  <div class="maindiv grid-container">
+    <div class="throwsheader mainheader"></div>
+    <div class="throwsmenu mainmenu menubar"></div>
+    <div class="left"></div>
+    <div class="middle">
+      <div class="content">
+        <div class="contenttext">
+          <a href="Top%20Ten%20Reasons%20to%20Throw%20the%20Discus.htm">Top ten reasons to throw the discus at
+            SMS</a><br />
+          <br />
+          <a href="Top%20Ten%20Reasons%20to%20Throw%20the%20Shot.htm">Top ten reasons to throw the shot at SMS</a>
         </div>
-        <div class="right"></div>
-        <div class="footer"></div>
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script>
-      $(".throwsheader").load("/throws/throwsheader.html");
-      $(".throwsmenu").load("/throws/throwsmenu.html");
-      $(".footer").load("/footer.html");
-    </script>
-  </body>
+    <div class="right"></div>
+    <div class="footer"></div>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script>
+    $(".throwsheader").load("/throws/throwsheader.html");
+    $(".throwsmenu").load("/throws/throwsmenu.html");
+    $(".footer").load("/footer.html");
+  </script>
+</body>
+
 </html>
