--- a/header.html
+++ b/header.html
@@ -26,8 +26,8 @@
         halign="middle"
       />
     </a>
-    <div class="titletext">
-      <p>Shawnee Mission South<br />Track & Field</p>
-    </div>
+  </div>
+      <div class="titletext">
+        Shawnee Mission South<br />Track & Field
   </div>
 </div>
