--- a/throws/throwsheader.html
+++ b/throws/throwsheader.html
@@ -5,7 +5,7 @@
 >
   <div style="text-align: left">
     <div class="titletext">
-      <p>Shawnee Mission South<br>Shot & Disc</p>
+     Shawnee Mission South<br>Shot & Disc
     </div>
   </div>
 </div>
