--- a/throws/index.htm
+++ b/throws/index.htm
@@ -22,7 +22,7 @@
     <div class="left"></div>
     <div class="middle">
       <div class="content">
-        <div class="contenttext">
+        <div class="contenttext aligncenter">
           <a href="Top%20Ten%20Reasons%20to%20Throw%20the%20Discus.htm">Top ten reasons to throw the discus at
             SMS</a><br />
           <br />
